--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
 	"type": "module",
 	"dependencies": {
 		"@tinymce/tinymce-svelte": "^1.0.1",
-		"pocketbase": "^0.14.4",
-		"svelte-routing": "^1.8.9"
+		"pocketbase": "^0.14.4"
 	}
 }
