--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@tailwindcss/typography": "^0.5.9",
 		"@tinymce/tinymce-svelte": "^1.0.1",
+		"daisyui": "^2.51.6",
 		"pocketbase": "^0.14.4"
 	}
 }
