--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"@tailwindcss/typography": "^0.5.9",
 		"@tinymce/tinymce-svelte": "^1.0.1",
 		"daisyui": "^2.51.6",
-		"pocketbase": "^0.14.4"
+		"firebase": "^9.22.0",
+		"svelte-forms-lib": "^2.0.1"
 	}
 }
